# task_planning

./: README.md
core/: CMakeLists.txt  package.xml
core/config/: demo.rviz  demo_params.yaml
core/launch/: demo.launch
core/scripts/: add_pick_action_client.py  plan_action_client.py
core/src/: CMakeLists.txt  interactive_task.cpp
core/src/stages/: CMakeLists.txt
msgs/: CMakeLists.txt  package.xml
msgs/action/: AddPick.action  AddPlace.action  AddRelease.action  ControlTask.action
